# mondai

./: .gitignore  co.tauos.Mondai.Devel.json  co.tauos.Mondai.json  co.tauos.ValaTemplate.Devel.json  com.fyralabs.Mondai.Devel.json  com.fyralabs.Mondai.json  meson.build
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yml
data/: co.tauos.Mondai.appdata.xml.in  co.tauos.Mondai.appdata.xml.in.in  co.tauos.Mondai.desktop.in  co.tauos.Mondai.desktop.in.in  co.tauos.Mondai.gresource.xml  co.tauos.Mondai.gschema.xml  com.fyralabs.Mondai.gresource.xml  com.fyralabs.Mondai.gschema.xml  meson.build  style.css
data/ui/: mainwindow.blp  mainwindow.ui
src/: Application.vala  MainWindow.vala  ProductItem.vala
